src/index.less
@prefix: ~'menu-item';

.svg-container {
  position: absolute;
}

.@{prefix} {
  cursor: pointer;

  &-sector {
    fill: white;
    stroke: #f1f3f8;
    stroke-width: 1;
  }
  &-title {
    font-size: 14px;
    fill: #383c4d;
  }

  &&-active:not(&-disabled) {
    .@{prefix}-sector {
      fill: #6eb0fc;
    }
    .@{prefix}-title {
      fill: white;
    }
  }

  &&-disabled {
    cursor: not-allowed;

    .@{prefix}-sector {
      fill: #fafafc;
    }
    .@{prefix}-title {
      fill: #9da0ad;
    }
  }
}

